--- a/client/doodle.css
+++ b/client/doodle.css
@@ -57,5 +57,50 @@ input#location {
 }
 
 #timeProposalModal #proposalDate, #timeProposalModal #proposalTime {
-	width: 60px;
+  width: 60px;
 }
+
+body {
+  padding-top: 20px;
+  padding-bottom: 60px;
+}
+
+/* Custom container */
+.container {
+  margin: 0 auto;
+}
+.container > hr {
+  margin: 60px 0;
+}
+
+/* Main marketing message and sign up button */
+.jumbotron {
+  margin: 80px 0;
+  text-align: center;
+}
+.jumbotron h1 {
+  font-size: 100px;
+  line-height: 1;
+}
+.jumbotron .lead {
+  font-size: 24px;
+  line-height: 1.25;
+}
+.jumbotron .btn {
+  font-size: 21px;
+  padding: 14px 24px;
+}
+
+/* Supporting marketing content */
+.marketing {
+  margin: 60px 0;
+}
+.marketing p + h4 {
+  margin-top: 28px;
+}
+
+.footer {
+	text-align: center;
+}
+
+     
