--- a/client/doodle.css
+++ b/client/doodle.css
@@ -56,8 +56,8 @@ input#location {
   margin: 5px 0px 20px;
 }
 
-#timeProposalModal #proposalDate, #timeProposalModal #proposalTime {
-  width: 60px;
+#proposalDate, #proposalTime {
+  width: 80px;
 }
 
 body {
@@ -101,6 +101,12 @@ body {
 
 .footer {
 	text-align: center;
+}
+
+#btnTimeProposalDelete {
+	float: left;
+	line-height: 20px;
+	margin: 0px 3px;
 }
 
      
