--- a/client/meetme.css
+++ b/client/meetme.css
@@ -96,6 +96,9 @@ body {
 
 .footer {
 	text-align: center;
+	margin: 100px 0px;
+	padding: 60px 0px;
+	border-top: solid #ddd 1px;
 }
 
 #btnTimeProposalDelete {
