--- a/client/meetme.css
+++ b/client/meetme.css
@@ -1,4 +1,8 @@
 /* CSS declarations go here */
+small {
+  font-size: 75%;
+}
+
 input#location {
 	width: 540px;
 }
@@ -71,6 +75,9 @@ body {
   margin: 60px 0;
 }
 
+.timepropitem {
+  line-height: 30px;
+}
 /* Main marketing message and sign up button */
 .jumbotron {
   margin: 80px 0;
@@ -103,11 +110,4 @@ body {
 	padding: 60px 0px;
 	border-top: solid #ddd 1px;
 }
-
-#btnTimeProposalDelete {
-	float: left;
-	line-height: 20px;
-	margin: 0px 3px;
-}
-
      
