--- a/client/meetme.css
+++ b/client/meetme.css
@@ -1,6 +1,14 @@
 /* CSS declarations go here */
+body {
+    background-color: #fff;
+    color: #333333;
+    font: 12px/18px Lucida Grande, Arial, Helvetica, Geneva, Verdana, sans-serif;
+    padding-top: 20px;
+    padding-bottom: 60px;
+}
+
 small {
-  font-size: 75%;
+  font-size: 80%;
 }
 
 input#location {
@@ -66,15 +74,11 @@ input#location {
   width: 140px;
 }
 
-body {
-  padding-top: 20px;
-  padding-bottom: 60px;
-}
-
 /* Custom container */
 .container {
   margin: 0 auto;
 }
+
 .container > hr {
   margin: 60px 0;
 }
