--- a/client/maria.css
+++ b/client/maria.css
@@ -118,7 +118,7 @@ input#location {
 }
 /* Main marketing message and sign up button */
 .jumbotron {
-  margin: 80px 0;
+  margin: 40px 0;
   text-align: center;
 }
 .jumbotron h1 {
@@ -155,13 +155,24 @@ input#location {
   margin: 0 auto;
 }
 
-.homebox h3 {
+.homebox h3, .homeboxclean h3 {
   font-size: 160%;
-  text-align: left;
+  text-align: center;
 }
 
-.homebox p {
+.homebox p, .homeboxclean h3 {
   margin: 16px 0px;
+}
+
+.homeboxclean .svgwrap {
+  width: 100%;
+  text-align: center;
+  padding: 0 0 20px 0;
+  margin: auto;
+}
+
+.homeboxclean .svgwrap img {
+  height: 100px;
 }
 
 .homebox a { display:block; cursor:pointer;
