--- a/client/homewizard.css
+++ b/client/homewizard.css
@@ -21,7 +21,7 @@
 
 .styledform li {
   padding: 12px;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px dotted #999;
   position: relative;
 }
 
@@ -36,8 +36,8 @@
 
 .required_notification {
   font-size: 11px;
-  color:#d45252;
-  margin:5px 0 0 0;
+  color: #d45252;
+  margin: 10px 0 0 0;
   display:inline;
   float:right;
 }
@@ -47,16 +47,59 @@
   margin-top: 3px;
   display:inline-block;
   float:left;
-  padding:3px;
+  padding:3px 20px;
+  text-align: right;
 }
 
 .styledform input {
   height:20px;
   width:160px;
-  padding:5px 8px;
+  padding: 5px 10px 8px;
 }
 
-.styledform textarea {padding:8px; width:240px;}
+.styledform textarea {
+  padding: 8px 10px 8px; 
+  width: 200px;
+}
+
+input:required, textarea:required {
+  background: #fff url(/img/red_asterisk.png) no-repeat 98% center;
+}
+
+.styledform input:focus:invalid, .styledform textarea:focus:invalid { /* when a field is considered invalid by the browser */
+  background: #fff url(/img/invalid.png) no-repeat 98% center;
+  box-shadow: 0 0 5px #d45252;
+  border-color: #b03535
+}
+
+.styledform input:required:valid, .styledform textarea:required:valid { /* when a field is considered valid by the browser */
+  background: #fff url(/img/valid.png) no-repeat 98% center;
+  box-shadow: 0 0 5px #5cd053;
+  border-color: #28921f;
+}
+
+.form_hint {
+  background: #d45252;
+  border-radius: 3px 3px 3px 3px;
+  color: white;
+  margin-left: 8px;
+  padding: 1px 6px;
+  z-index: 999; /* hints stay above all other elements */
+  position: absolute; /* allows proper formatting if hint is two lines */
+  display: none;
+}
+
+.form_hint::before {
+  content: "\25C0"; /* left point triangle in escaped unicode */
+  color:#d45252;
+  position: absolute;
+  top:1px;
+  left:-6px;
+}
+
+.styledform input:focus + .form_hint {display: inline;}
+.styledform input:required:valid + .form_hint {background: #28921f;} /* change form hint color when valid */
+.styledform input:required:valid + .form_hint::before {color:#28921f;} /* change form hint arrow color when valid */
 
 .styledform button {margin-left:106px;}
 
@@ -115,14 +158,14 @@
 }
 
 .styledform input:focus, .styledform textarea:focus { /* add this to the already existing style */
-  padding-right:70px;
+  padding-right: 40px;
 }
 
 .styledform input, .styledform textarea { /* add this to the already existing style */
-  -moz-transition: padding .25s;
-  -webkit-transition: padding .25s;
-  -o-transition: padding .25s;
-  transition: padding .25s;
+  -moz-transition: padding .25s ease-out;
+  -webkit-transition: padding .25s ease-out;
+  -o-transition: padding .25s ease-out;
+  transition: padding .25s ease-out;
 }
 
 *:focus {
