--- a/client/homewizard.css
+++ b/client/homewizard.css
@@ -21,12 +21,18 @@
 
 .styledform li {
   padding: 12px;
-  border-bottom: 1px dotted #999;
+  border-bottom: 0px dotted #999;
   position: relative;
 }
 
-.styledform li:first-child, .styledform li:last-child {
+.styledform li:first-child {
     border-bottom: 1px solid #777;
+}
+
+.styledform li:last-child {
+  border-top: 1px solid #aaa;
+  border-bottom: 0px;
+  padding: 10px 154px;
 }
 
 .styledform h2 {
@@ -35,7 +41,7 @@
 }
 
 .required_notification {
-  font-size: 11px;
+  font-size: 1em;
   color: #d45252;
   margin: 10px 0 0 0;
   display:inline;
@@ -53,13 +59,11 @@
 
 .styledform input {
   height:20px;
-  width:160px;
   padding: 5px 10px 8px;
 }
 
 .styledform textarea {
-  padding: 8px 10px 8px; 
-  width: 200px;
+  padding: 8px 10px 8px;
 }
 
 input:required, textarea:required {
@@ -101,60 +105,16 @@ input:required, textarea:required {
 .styledform input:required:valid + .form_hint {background: #28921f;} /* change form hint color when valid */
 .styledform input:required:valid + .form_hint::before {color:#28921f;} /* change form hint arrow color when valid */
 
-.styledform button {margin-left:106px;}
-
 .styledform input, .styledform textarea {
   border:1px solid #aaa;
   box-shadow: 0px 0px 3px #ccc, 0 10px 15px #eee inset;
-  border-radius:2px;
+  border-radius: 2px;
 }
 
 .styledform input:focus, .styledform textarea:focus {
   background: #fff;
   border:1px solid #555;
   box-shadow: 0 0 3px #aaa;
-}
-
-/* Button Style */
-.styledform button.submit {
-  background-color: #68b12f;
-  background: -webkit-gradient(linear, left top, left bottom, from(#68b12f), to(#50911e));
-  background: -webkit-linear-gradient(top, #68b12f, #50911e);
-  background: -moz-linear-gradient(top, #68b12f, #50911e);
-  background: -ms-linear-gradient(top, #68b12f, #50911e);
-  background: -o-linear-gradient(top, #68b12f, #50911e);
-  background: linear-gradient(top, #68b12f, #50911e);
-  border: 1px solid #509111;
-  border-bottom: 1px solid #5b992b;
-  border-radius: 3px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  box-shadow: inset 0 1px 0 0 #9fd574;
-  -webkit-box-shadow: 0 1px 0 0 #9fd574 inset ;
-  -moz-box-shadow: 0 1px 0 0 #9fd574 inset;
-  -ms-box-shadow: 0 1px 0 0 #9fd574 inset;
-  -o-box-shadow: 0 1px 0 0 #9fd574 inset;
-  color: white;
-  font-weight: bold;
-  padding: 6px 20px;
-  text-align: center;
-  text-shadow: 0 -1px 0 #396715;
-}
-
-.styledform button.submit:hover {
-  opacity:.85;
-  cursor: pointer;
-}
-
-.styledform button.submit:active {
-  border: 1px solid #20911e;
-  box-shadow: 0 0 10px 5px #356b0b inset;
-  -webkit-box-shadow:0 0 10px 5px #356b0b inset ;
-  -moz-box-shadow: 0 0 10px 5px #356b0b inset;
-  -ms-box-shadow: 0 0 10px 5px #356b0b inset;
-  -o-box-shadow: 0 0 10px 5px #356b0b inset;
 }
 
 .styledform input:focus, .styledform textarea:focus { /* add this to the already existing style */
