--- a/client/homewizard.css
+++ b/client/homewizard.css
@@ -1,7 +1,5 @@
-.styledform {}
-
-.styledform h2 {
-  font-size: 2em;
+.styledform {
+  overflow: hidden;
 }
 
 .styledform label {
@@ -36,6 +34,7 @@
 }
 
 .styledform h2 {
+  font-size: 2em;
   margin:0;
   display: inline;
 }
@@ -130,4 +129,15 @@ input:required, textarea:required {
 
 *:focus {
   outline: none;
+}
+
+#homewizstepone, #homewizsteptwo {
+  height: 0px;
+  opacity: 0;
+  overflow: hidden;
+  -webkit-transition: height 1000ms ease-in-out, opacity 1000ms ease-in-out;
+   -moz-transition: height 1000ms ease-in-out, opacity 1000ms ease-in-out;
+   -o-transition: height 1000ms ease-in-out, opacity 1000ms ease-in-out;
+   -ms-transition: height 1000ms ease-in-out, opacity 1000ms ease-in-out;
+   transition: height 1000ms ease-in-out, opacity 1000ms ease-in-out;
 }
