--- a/client/homewizard.css
+++ b/client/homewizard.css
@@ -117,7 +117,7 @@ input:required, textarea:required {
 }
 
 .styledform input:focus, .styledform textarea:focus { /* add this to the already existing style */
-  padding-right: 40px;
+  /* padding-right: 40px; */
 }
 
 .styledform input, .styledform textarea { /* add this to the already existing style */
@@ -140,4 +140,13 @@ input:required, textarea:required {
    -o-transition: height 500ms ease-in-out, opacity 500ms ease-in-out;
    -ms-transition: height 500ms ease-in-out, opacity 500ms ease-in-out;
    transition: height 500ms ease-in-out, opacity 500ms ease-in-out;
+}
+
+#homewiztwo strong {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+#homewiztwo .row, #homewiztwo .span3 {
+  padding: 10px 0px;
 }
