--- a/client/maria.css
+++ b/client/maria.css
@@ -254,6 +254,11 @@ input#location {
 .container .homepage {
   background: #fff;
   z-index: 5;
+  
+}
+
+.container .jumbotron {
+  padding-top: 50px;
 }
 
 .container > hr {
@@ -384,11 +389,11 @@ input#location {
   display: block;
   clear:both;
   overflow: hidden;
-  -webkit-transition: height 1000ms ease-in-out;
-  -moz-transition: height 1000ms ease-in-out;
-  -o-transition: height 1000ms ease-in-out;
-  -ms-transition: height 1000ms ease-in-out;
-  transition: height 1000ms ease-in-out;
+  -webkit-transition: height 1000ms ease-in-out, padding 1000ms ease-in-out;
+  -moz-transition: height 1000ms ease-in-out, padding 1000ms ease-in-out;
+  -o-transition: height 1000ms ease-in-out, padding 1000ms ease-in-out;
+  -ms-transition: height 1000ms ease-in-out, padding 1000ms ease-in-out;
+  transition: height 1000ms ease-in-out, padding 1000ms ease-in-out;
 }
 
 .wizardPaneStep {
@@ -408,3 +413,7 @@ input#location {
   padding-top: 70px;
 }
 
+.lovegrid .item {
+  color: #000;
+  overflow: hidden;
+}
