--- a/client/views/timeProposalsDialog.tpl.html
+++ b/client/views/timeProposalsDialog.tpl.html
@@ -24,7 +24,7 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-default done" data-dismiss="modal">Close</button>
           <button type="button" class="btn btn-primary" id="btnAddTimeProposals">Add Proposal</button>
         </div>
       </div><!-- /.modal-content -->
