--- a/client/maria.css
+++ b/client/maria.css
@@ -47,128 +47,32 @@ i {
     width: 0;
 }
 
-#header {
-    background: none repeat scroll 0 0 #000000;
-    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.6);
-    padding: 0;
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
-}
-
-.row {
-    margin: 0 auto;
-    max-width: 1170px;
-    min-width: 735px;
-    position: relative;
-    width: 100%;
-}
 
 .eventlist {
   padding: 0px;
   margin: 0px;
 }
 
-#nav {
-    padding-top: 60px;
-    text-align: center;
-}
-
-#nav li {
-    display: inline-block;
-    padding: 35px 12px;
-}
-
-#nav li.disabled a {
-    opacity: 0.25;
-}
-#nav li.disabled a:hover {
-}
-#nav li a.n-home {
-    background-position: 9px 0;
-}
-#nav li a.n-home:hover, #nav li a.n-home.active {
-    background-position: 9px -108px;
-}
-#nav li a.n-venue {
-    background-position: -135px 0;
-}
-#nav li a.n-venue:hover, #nav li a.n-venue.active {
-    background-position: -135px -108px;
-}
-#nav li a.n-agenda {
-    background-position: -279px 0;
-}
-#nav li a.n-agenda:hover, #nav li a.n-agenda.active {
-    background-position: -279px -108px;
-}
-#nav li a.n-sponsors {
-    background-position: -1118px 0;
-}
-#nav li a.n-sponsors:hover, #nav li a.n-sponsors.active {
-    background-position: -1118px -108px;
-}
-#nav li a.n-speakers {
-    background-position: -423px 0;
-}
-#nav li a.n-speakers:hover, #nav li a.n-speakers.active {
-    background-position: -423px -108px;
-}
-#nav li a.n-startups {
-    background-position: -567px 0;
-}
-#nav li a.n-startups:hover, #nav li a.n-startups.active {
-    background-position: -567px -108px;
-}
-#nav li a.n-hackathon {
-    background-position: -711px 0;
-}
-#nav li a.n-hackathon:hover, #nav li a.n-hackathon.active {
-    background-position: -711px -108px;
-}
-#nav li a.n-startupbattle {
-    background-position: -855px 0;
-}
-#nav li a.n-startupbattle:hover, #nav li a.n-startupbattle.active {
-    background-position: -855px -108px;
-}
-
-#nav li a.n-home:hover, #nav li a.n-home.active {
-    background-position: 9px -108px;
-}
-#nav li a.n-home {
-    background-position: 9px 0;
-}
-#nav li a {
-    background: url("/img/nav-sprite-5.png") no-repeat scroll 0 0 transparent;
-    display: block;
-    height: 106px;
-    text-indent: -9999px;
-    width: 110px;
-}
-
 .navbar-brand {
     float: left;
     font-size: 18px;
-    line-height: 20px;
-    padding: 25px 0px 25px 60px;
+    padding: 3px 0px 5px 32px;
 }
 
 .toplogo {
-  background: url("/img/maria-logo-grey.svg") 10px 20px no-repeat;
-  background-size: 38px 28px;
+  background: url("/img/maria-logo-grey.svg") no-repeat;
+  background-size: 28px 22px;
+  margin: 10px 5px;
 }
 
 .toplogo:hover {
-  background: url("/img/maria-logo-white.svg") 10px 20px no-repeat;
-  background-size: 38px 28px;
+  background: url("/img/maria-logo-white.svg") no-repeat;
+  background-size: 28px 22px;
+  margin: 10px 5px;
 }
 
 .navbar-nav {
-    float: left;
-    margin: 0;
-    line-height: 20px;
-    padding: 12px 0px 0px 40px;
+  padding-left: 20px;
 }
 
 .bottomlogo {
@@ -264,10 +168,10 @@ small {
   margin: 0 auto;
 }
 
-.container .homepage {
+.homepage {
   background: #fff;
   z-index: 5;
-  
+  margin-top: 70px;
 }
 
 .container .jumbotron {
@@ -425,11 +329,6 @@ small {
 .topdrop {
   padding-top: 70px;
 }
-
-.topdrop-dashboard {
-  padding-top: 90px;
-}
-
 
 .lovegrid .item {
   color: #000;
