--- a/client/maria.css
+++ b/client/maria.css
@@ -338,3 +338,15 @@ small {
 .linkhome {
   cursor: pointer;
 }
+
+#btnAddAttendee {
+  -moz-user-select: none;
+  background-image: none;
+  border: 1px solid rgba(0, 0, 0, 0);
+  cursor: pointer;
+  font-size: 14px;
+  margin-bottom: 0;
+  padding: 2px 20px;
+  line-height: 1.9;
+  vertical-align: top;
+}
